--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,19 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.container {
+  // background-color: aliceblue;
+  max-width: 1280px;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+@media screen and (max-width: 1280px) {
+  #section05 {
+    .container {
+      padding: 0 14px;
+    }
+  }
+}
