--- a/src/reset.scss
+++ b/src/reset.scss
@@ -22,7 +22,7 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  // box-sizing: border-box;
 }
 
 /* Reapply the pointer cursor for anchor tags */
