--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,6 +4,7 @@
   padding-top: 75px;
 
   .contact_wrap {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,8 +17,7 @@
   }
 
   .info_wrap {
-    background-color: pink;
-    width: 100%;
+    background-color: #f5f5f5;
     height: 555px;
     margin-bottom: 30px;
   }
