--- a/src/pages/Main.scss
+++ b/src/pages/Main.scss
@@ -8,7 +8,7 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 #main::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera*/
+  // display: none; /* Chrome, Safari, Opera*/
 }
 
 #main {
