--- a/src/reset.scss
+++ b/src/reset.scss
@@ -5,7 +5,8 @@
 
 html {
   font-size: 16px;
-  font-family: "Montserrat", "NanumSquareRound", sans-serif;
+  font-family: "Montserrat", "Noto Sans KR", sans-serif;
+  cursor: default;
 }
 
 /*
