--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,30 @@
 @import "./config/variables.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 // font-family: 'Montserrat', sans-serif;
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 // font-family: 'Noto Sans KR', sans-serif;
+
+@font-face {
+	font-family: "Montserrat-Regular";
+	src: url("./assets/fonts/Montserrat-Regular.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "Montserrat-Bold";
+	src: url("./assets/fonts/Montserrat-Bold.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "NotoSansKR-Regular";
+	src: url("./assets/fonts/NotoSansKR-Regular.otf") format("truetype");
+}
+
+@font-face {
+	font-family: "NotoSansKR-Bold";
+	src: url("./assets/fonts/NotoSansKR-Bold.otf") format("truetype");
+}
 
 .container {
   // background-color: aliceblue;
