--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,8 +16,10 @@
   }
 
   h1 {
-    font-size: 18px;
-    font-weight: 700;
+    a {
+      font-size: 18px;
+      font-family: "Montserrat-Bold";
+    }
   }
 
   #nav {
@@ -27,8 +29,9 @@
       li {
         position: relative;
         margin-left: 50px;
-        cursor: pointer;
+        padding: 15px 0;
         font-size: 13px;
+        cursor: pointer;
 
         &::after {
           content: "";
@@ -36,7 +39,7 @@
           height: 0.5px;
           background: #000000;
           position: absolute;
-          bottom: -3px;
+          bottom: 10px;
           left: 0;
           transition: all 0.3s;
         }
