--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -13,7 +13,7 @@
   h2 {
     margin-bottom: 30px;
     font-size: 2.5rem;
-    font-weight: 700;
+    font-family: "Montserrat-Bold";
   }
 
   .contents_wrap {
