--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -39,12 +39,12 @@
 
       li {
         position: relative;
-        width: calc(33.33% - 13.33px);
-        height: calc(50% - 10px);
-        margin-right: 20px;
-        margin-bottom: 20px;
-        background: #f5f5f5;
-        background-color: black;
+        width: calc(33.33% - 20px);
+        height: calc(50% - 15px);
+        margin-right: 30px;
+        margin-bottom: 30px;
+        border: 2px solid #f5f5f5;
+        box-sizing: border-box;
 
         &:nth-child(3n) {
           margin-right: 0;
