--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,30 @@
 @import "./config/variables.scss";
 
 @font-face {
-	font-family: "Montserrat-Regular";
-	src: url("./assets/fonts/Montserrat-Regular.ttf") format("truetype");
+  font-family: "Montserrat-Regular";
+  src: url("./assets/fonts/Montserrat-Regular.ttf") format("truetype");
 }
 
 @font-face {
-	font-family: "Montserrat-Bold";
-	src: url("./assets/fonts/Montserrat-Bold.ttf") format("truetype");
+  font-family: "Montserrat-Bold";
+  src: url("./assets/fonts/Montserrat-Bold.ttf") format("truetype");
 }
 
 @font-face {
-	font-family: "NotoSansKR-Regular";
-	src: url("./assets/fonts/NotoSansKR-Regular.otf") format("truetype");
+  font-family: "NotoSansKR-Regular";
+  src: url("./assets/fonts/NotoSansKR-Regular.otf") format("truetype");
 }
 
 @font-face {
-	font-family: "NotoSansKR-Bold";
-	src: url("./assets/fonts/NotoSansKR-Bold.otf") format("truetype");
+  font-family: "NotoSansKR-Bold";
+  src: url("./assets/fonts/NotoSansKR-Bold.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "LeferiPoint-BlackA";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-BlackA.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .container {
