--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,18 +1,39 @@
 #home {
+  position: relative;
   background-color: black;
   height: calc(100vh - 75px);
   padding-top: 75px;
+  overflow: hidden;
 
   .home_inwrap {
+    position: relative;
     display: flex;
     align-items: center;
+
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      // background-color: gray;
+      background-image: url(../../assets/itsme2.png);
+      background-repeat: no-repeat;
+      background-size: auto 100%;
+      background-position: right;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
   }
 
   p {
+    // background-color: palevioletred;
+    position: relative;
     color: #ffffff;
-    font-size: 64px;
-    line-height: 87px;
+    font-size: 4rem;
     font-family: "LeferiPoint-BlackA";
+    line-height: 6.5rem;
+    letter-spacing: 1px;
     text-align: left;
+    white-space: pre-wrap;
   }
 }
