--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -74,6 +74,7 @@
           display: inline-block;
           width: 78px;
           margin-bottom: 15px;
+          padding-left: 10px;
           font-family: "NotoSansKR-Bold";
         }
 
