--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -43,7 +43,7 @@
         height: calc(50% - 15px);
         margin-right: 30px;
         margin-bottom: 30px;
-        border: 2px solid #f5f5f5;
+        border: 2px solid #eee;
         box-sizing: border-box;
 
         &:nth-child(3n) {
