--- a/src/pages/More.scss
+++ b/src/pages/More.scss
@@ -1,4 +1,162 @@
 #more {
   height: calc(100vh - 75px);
-	padding-top: 75px;
+  padding-top: 75px;
+
+  h2 {
+    margin-bottom: 40px;
+    padding-top: 40px;
+    font-size: 2.5rem;
+    font-family: "Montserrat-Bold";
+  }
+
+  ul {
+    // background-color: antiquewhite;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    li {
+      position: relative;
+      width: calc(33.33% - 20px);
+      height: 258.5px;
+      margin-right: 30px;
+      margin-bottom: 40px;
+      border: 2px solid #eee;
+      box-sizing: border-box;
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .text_wrap {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0);
+        transition: all 0.4s;
+
+        &::before {
+          content: "";
+          background: #fff;
+          width: 0px;
+          height: 1px;
+          position: absolute;
+          right: 20px;
+          top: 20px;
+          transition: all 0.4s;
+        }
+
+        &::after {
+          content: "";
+          background: #fff;
+          width: 1px;
+          height: 0px;
+          position: absolute;
+          right: 20px;
+          top: 20px;
+          transition: all 0.4s;
+        }
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.7);
+
+          &::before {
+            width: calc(100% - 40px);
+          }
+
+          &::after {
+            height: calc(100% - 40px);
+          }
+        }
+
+        a {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+
+          &::before {
+            content: "";
+            background: #fff;
+            width: 0px;
+            height: 1px;
+            position: absolute;
+            left: 20px;
+            bottom: 20px;
+            transition: all 0.4s;
+          }
+
+          &::after {
+            content: "";
+            background: #fff;
+            width: 1px;
+            height: 0px;
+            position: absolute;
+            left: 20px;
+            bottom: 20px;
+            transition: all 0.4s;
+          }
+
+          &:hover {
+            &::before {
+              width: calc(100% - 40px);
+            }
+
+            &::after {
+              height: calc(100% - 40px);
+            }
+
+            span {
+              opacity: 1;
+            }
+          }
+
+          span {
+            color: #ffffff;
+            font-size: 24px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            opacity: 0;
+            transition: all 0.4s;
+          }
+        }
+      }
+    }
+  }
+}
+
+.topBtn {
+  position: fixed;
+  bottom: -50px;
+  right: 50px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #f5f5f5;
+  background-image: url(../assets/arrow.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  transition: all 0.3s ease-in;
+	z-index: 10;
+	
+  &.active {
+		bottom: 50px;
+  }
+	
+  &:hover {
+		background-image: url(../assets/ico_upArrow.png);
+  }
 }
