--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,7 @@
 
 .container {
   // background-color: aliceblue;
+  position: relative;
   max-width: 1280px;
   height: 100%;
   margin: 0 auto;
