--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -3,11 +3,34 @@
   padding-top: 75px;
   text-align-last: left;
 
+  .backBtn {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #f5f5f5;
+    background-image: url(../assets/ico_leftArrow.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px;
+    transition: all 0.2s ease-in;
+
+    &.active {
+      bottom: 50px;
+    }
+
+    &:hover {
+      background-image: url(../assets/ico_leftArrowB.png);
+    }
+  }
+
   h2 {
     margin-bottom: 50px;
     padding-top: 50px;
     font-size: 2.5rem;
-    font-family: "NotoSansKR-Bold";
+    // font-family: "NotoSansKR-Bold";
   }
 
   .top_wrap {
@@ -28,6 +51,55 @@
       padding: 25px 30px;
       background-color: #f5f5f5;
       box-sizing: border-box;
+
+      li {
+        display: inline-block;
+        margin-right: 20px;
+        margin-bottom: 20px;
+
+        a {
+          color: #337ab7;
+          font-size: 18px;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+
+      p.description {
+        line-height: 1.5rem;
+      }
+
+      p {
+        margin-bottom: 20px;
+
+        .name {
+          // background-color: aqua;
+          display: inline-block;
+          width: 100px;
+          font-weight: bold;
+        }
+
+        .value {
+        }
+      }
+
+      p.function {
+        display: flex;
+        margin-bottom: 0;
+
+        .value {
+          span {
+            display: block;
+            margin-bottom: 15px;
+
+            &:last-child {
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
     }
   }
 
