--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -30,11 +30,9 @@
     margin-bottom: 50px;
     padding-top: 50px;
     font-size: 2.5rem;
-    // font-family: "NotoSansKR-Bold";
   }
 
   .top_wrap {
-    background-color: antiquewhite;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -75,7 +73,6 @@
         margin-bottom: 20px;
 
         .name {
-          // background-color: aqua;
           display: inline-block;
           width: 100px;
           font-weight: bold;
@@ -104,6 +101,13 @@
   }
 
   .bottopm_wrap {
-    background-color: pink;
+    margin-top: 65px;
+
+    h3 {
+      margin-bottom: 40px;
+      padding: 10px 15px;
+      font-size: 2.5rem;
+      background: #f5f5f5;
+    }
   }
 }
