--- a/src/components/ProjectData/ProjectData.scss
+++ b/src/components/ProjectData/ProjectData.scss
@@ -1,4 +1,42 @@
 #projectData {
+  .function_wrap {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+
+    ul {
+      position: relative;
+      width: calc(25% - 37.5px);
+      margin-right: 50px;
+      margin-bottom: 50px;
+      padding: 20px 30px 15px 40px;
+      line-height: 35px;
+      border: 1px solid #000;
+      box-sizing: border-box;
+
+      &:nth-child(4n) {
+        margin-right: 0;
+      }
+
+      b {
+        display: inline-block;
+        position: absolute;
+        top: -16px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 0 20px;
+        font-size: 18px;
+        letter-spacing: 2px;
+        text-align: center;
+        background: #fff;
+      }
+
+      li {
+        list-style: disc;
+      }
+    }
+  }
+
   .descritpion_wrap {
     display: flex;
     justify-content: space-between;
@@ -29,6 +67,21 @@
         li {
           list-style: circle;
         }
+      }
+    }
+  }
+
+  .text_wrap {
+    margin-bottom: 40px;
+
+    ul {
+      padding: 20px 30px 15px 40px;
+      line-height: 35px;
+      border: 1px solid #000;
+      box-sizing: border-box;
+
+      li {
+        list-style: disc;
       }
     }
   }
