메가박스, 투두리스트

--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -66,6 +66,7 @@
       }
 
       p.description {
+        text-align: left;
         line-height: 1.5rem;
       }
 
@@ -106,6 +107,7 @@
 
   .bottopm_wrap {
     margin-top: 65px;
+    margin-top: 50px;
     // padding-bottom: 30px;
 
     h3 {
