--- a/src/components/ProjectData/ProjectData.scss
+++ b/src/components/ProjectData/ProjectData.scss
@@ -48,7 +48,7 @@
       border: 2px solid #f5f5f5;
       box-sizing: border-box;
     }
-
+    
     .text_box {
       width: 630px;
       padding: 25px 30px;
@@ -90,6 +90,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
     padding-bottom: 50px;
 
     img {
