--- a/src/components/ProjectData/ProjectData.scss
+++ b/src/components/ProjectData/ProjectData.scss
@@ -47,6 +47,7 @@
       width: 630px;
       border: 2px solid #f5f5f5;
       box-sizing: border-box;
+      cursor: pointer;
     }
     
     .text_box {
@@ -97,6 +98,7 @@
       width: 32%;
       border: 2px solid #f5f5f5;
       box-sizing: border-box;
+      cursor: pointer;
     }
   }
 }
