--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -3,6 +3,12 @@
   padding-top: 75px;
   text-align-last: left;
 
+  h2 {
+    margin-bottom: 50px;
+    padding-top: 50px;
+    font-size: 2.5rem;
+  }
+
   .top_wrap {
     display: flex;
     justify-content: space-between;
