--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -14,7 +14,6 @@
       content: "";
       width: 100%;
       height: 100%;
-      // background-color: gray;
       background-image: url(../../assets/itsme2.png);
       background-repeat: no-repeat;
       background-size: auto 100%;
@@ -26,7 +25,6 @@
   }
 
   p {
-    // background-color: palevioletred;
     position: relative;
     color: #ffffff;
     font-size: 4rem;
@@ -35,5 +33,48 @@
     letter-spacing: 1px;
     text-align: left;
     white-space: pre-wrap;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #home {
+    .home_inwrap {
+      &::before {
+        background-size: auto 90%;
+        background-position: right bottom;
+      }
+    }
+
+    p {
+      font-size: 3.5rem;
+      line-height: 5.5rem;
+      letter-spacing: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #home {
+    height: calc(100vh - 60px);
+    padding-top: 60px;
+
+    .home_inwrap {
+      &::before {
+        background-size: auto 90%;
+        background-size: auto 100%;
+        background-position: bottom;
+      }
+    }
+
+    p {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #home {
+    height: calc(100vh - 50px);
+    padding-top: 0;
   }
 }
