--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -17,7 +17,7 @@
       background-image: url(../../assets/itsme2.png);
       background-repeat: no-repeat;
       background-size: auto 100%;
-      background-position: right;
+      background-position: right bottom;
       position: absolute;
       bottom: 0;
       right: 0;
@@ -34,6 +34,10 @@
     text-align: left;
     white-space: pre-wrap;
   }
+
+  span {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -41,33 +45,40 @@
     .home_inwrap {
       &::before {
         background-size: auto 90%;
-        background-position: right bottom;
       }
     }
 
     p {
-      font-size: 3.5rem;
-      line-height: 5.5rem;
-      letter-spacing: 0;
+      font-size: 3.2rem;
+      line-height: 5rem;
     }
   }
 }
 
 @media screen and (max-width: 768px) {
   #home {
-    height: calc(100vh - 60px);
-    padding-top: 60px;
+    height: calc(100vh - 50px);
+    padding-top: 50px;
 
     .home_inwrap {
-      &::before {
-        background-size: auto 90%;
-        background-size: auto 100%;
-        background-position: bottom;
-      }
+      align-items: normal;
     }
 
     p {
       display: none;
+    }
+
+    span {
+      display: block;
+      position: relative;
+      color: #ffffff;
+      font-size: 3.3rem;
+      font-family: "LeferiPoint-BlackA";
+      line-height: 5rem;
+      letter-spacing: 1px;
+      text-align: left;
+      white-space: pre-wrap;
+      margin-top: 55px;
     }
   }
 }
@@ -76,5 +87,16 @@
   #home {
     height: calc(100vh - 50px);
     padding-top: 0;
+
+    .home_inwrap {
+      &::before {
+        background-size: auto 90%;
+        background-position: center bottom;
+      }
+    }
+
+    span {
+      display: none;
+    }
   }
 }
