--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,36 +2,32 @@
   background-color: #ffffff;
   height: calc(100vh - 75px);
   padding-top: 75px;
+  display: flex;
+  align-items: center;
 
   .contact_wrap {
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-height: 670px;
+    padding: 30px 0;
+    box-sizing: border-box;
   }
 
   h2 {
-    margin-bottom: 30px;
     font-size: 2.5rem;
     font-family: "Montserrat-Bold";
   }
 
   .info_wrap {
-    // background-color: #f5f5f5;
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 555px;
-    margin-bottom: 30px;
+    flex: 1;
 
     .text_wrap {
-      margin-bottom: 50px;
-
-      &:last-of-type {
-        margin-bottom: 60px;
-      }
+      margin: 25px 0;
 
       h6 {
         margin-bottom: 10px;
@@ -51,15 +47,19 @@
         }
       }
     }
+  }
+}
 
-    #footer {
-      position: absolute;
-      bottom: 40px;
-      bottom: 0px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 13px;
-      font-family: "NotoSansKR-Regular";
-    }
+@media screen and (max-width: 768px) {
+  #contact {
+    height: calc(100vh - 50px);
+    padding-top: 50px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #contact {
+    height: 100vh;
+    padding-top: 0;
   }
 }
