--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -3,6 +3,10 @@
   padding-top: 75px;
   text-align-last: left;
 
+  .detail_inwrap {
+    height: auto;
+  }
+
   h2 {
     margin-bottom: 50px;
     padding-top: 50px;
