--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -5,12 +5,13 @@
   display: flex;
   align-items: center;
 
-  .contact_wrap {
+  .contact_inwrap {
     display: flex;
     flex-direction: column;
     justify-content: center;
     max-height: 670px;
-    padding: 30px 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
     box-sizing: border-box;
   }
 
