--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 75px;
   background-color: white;
+  box-shadow: 0px 1px 6px #00000029;
   z-index: 99;
 
   .header_inwrap {
@@ -17,6 +18,7 @@
 
   h1 {
     a {
+      vertical-align: middle;
       font-size: 18px;
       font-family: "Montserrat-Bold";
     }
