--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,76 +1,107 @@
 #project {
-  background-color: #ffffff;
-  height: calc(100vh - 75px);
+  display: flex;
+  align-items: center;
+  min-height: calc(100vh - 75px);
   padding-top: 75px;
-  // background-color: palegoldenrod;
+  background: #ffffff;
 
   .project_inwrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    box-sizing: border-box;
   }
 
   h2 {
-    margin-bottom: 30px;
     font-size: 2.5rem;
     font-family: "Montserrat-Bold";
   }
 
-  .contents_wrap {
-    position: relative;
-    margin-bottom: 30px;
+  .more {
+    display: block;
+    margin: 5px 0 10px 0;
+    color: #bbbbbb;
+    text-align: right;
 
-    .more {
-      position: absolute;
-      top: -30px;
-      right: 0;
-      color: #bbbbbb;
-
-      &:hover {
-        color: #000000;
-      }
+    &:hover {
+      color: #000000;
     }
+  }
 
-    ul {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      height: 555px;
+  .contents_wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-      li {
-        position: relative;
-        width: calc(33.33% - 20px);
-        height: calc(50% - 15px);
-        margin-right: 30px;
-        margin-bottom: 30px;
-        border: 2px solid #eee;
-        box-sizing: border-box;
+    li {
+      position: relative;
+      width: calc(33.33% - 20px);
+      height: auto;
+      margin-bottom: 30px;
+      border: 2px solid #eee;
+      box-sizing: border-box;
 
-        &:nth-child(3n) {
-          margin-right: 0;
-        }
+      &:nth-child(n + 4) {
+        margin-bottom: 0;
+      }
 
-        &:nth-child(n + 4) {
-          margin-bottom: 0;
-        }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
+      .text_wrap {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0);
+        transition: all 0.4s;
 
-        .text_wrap {
+        &::before {
+          content: "";
+          background: #fff;
+          width: 0px;
+          height: 1px;
           position: absolute;
-          top: 0;
-          left: 0;
+          right: 20px;
+          top: 20px;
+          transition: all 0.4s;
+        }
+
+        &::after {
+          content: "";
+          background: #fff;
+          width: 1px;
+          height: 0px;
+          position: absolute;
+          right: 20px;
+          top: 20px;
+          transition: all 0.4s;
+        }
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.7);
+
+          &::before {
+            width: calc(100% - 40px);
+          }
+
+          &::after {
+            height: calc(100% - 40px);
+          }
+        }
+
+        a {
           display: flex;
           justify-content: center;
           align-items: center;
           width: 100%;
           height: 100%;
-          background-color: rgba(0, 0, 0, 0);
-          transition: all 0.4s;
 
           &::before {
             content: "";
@@ -78,8 +109,8 @@
             width: 0px;
             height: 1px;
             position: absolute;
-            right: 20px;
-            top: 20px;
+            left: 20px;
+            bottom: 20px;
             transition: all 0.4s;
           }
 
@@ -89,14 +120,12 @@
             width: 1px;
             height: 0px;
             position: absolute;
-            right: 20px;
-            top: 20px;
+            left: 20px;
+            bottom: 20px;
             transition: all 0.4s;
           }
 
           &:hover {
-            background-color: rgba(0, 0, 0, 0.7);
-
             &::before {
               width: calc(100% - 40px);
             }
@@ -104,62 +133,70 @@
             &::after {
               height: calc(100% - 40px);
             }
-          }
-
-          a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-
-            &::before {
-              content: "";
-              background: #fff;
-              width: 0px;
-              height: 1px;
-              position: absolute;
-              left: 20px;
-              bottom: 20px;
-              transition: all 0.4s;
-            }
-
-            &::after {
-              content: "";
-              background: #fff;
-              width: 1px;
-              height: 0px;
-              position: absolute;
-              left: 20px;
-              bottom: 20px;
-              transition: all 0.4s;
-            }
-
-            &:hover {
-              &::before {
-                width: calc(100% - 40px);
-              }
-
-              &::after {
-                height: calc(100% - 40px);
-              }
-
-              span {
-                opacity: 1;
-              }
-            }
 
             span {
-              color: #ffffff;
-              font-size: 24px;
-              font-weight: bold;
-              letter-spacing: 1px;
-              opacity: 0;
-              transition: all 0.4s;
+              opacity: 1;
             }
+          }
+
+          span {
+            color: #ffffff;
+            font-size: 24px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            opacity: 0;
+            transition: all 0.4s;
           }
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #project {
+    .contents_wrap {
+      li {
+        width: calc(50% - 15px);
+        // height: auto;
+        // margin-bottom: 30px;
+
+        &:nth-child(n + 4) {
+          // margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #project {
+    .more {
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .contents_wrap {
+      justify-content: center;
+
+      li {
+        width: 400px;
+
+        &:nth-child(4) {
+          margin-bottom: 0;
+        }
+
+        &:nth-child(n + 5) {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #project {
+    padding-top: 0;
   }
 }
