--- a/src/pages/Main.scss
+++ b/src/pages/Main.scss
@@ -1,19 +1,3 @@
-/* 화면에서 스크롤바 안보이게 */
 #main {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-#main::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera*/
-}
-
-#main {
-  overflow-y: auto;
-  height: 100vh;
-}
-
-.divider {
-  width: 100%;
-  height: 75px;
-  background-color: gray;
+  // height: 100vh;
 }
