--- a/src/pages/More.scss
+++ b/src/pages/More.scss
@@ -2,6 +2,10 @@
   height: calc(100vh - 75px);
   padding-top: 75px;
 
+  .more_inwrap {
+    height: auto;
+  }
+
   h2 {
     margin-bottom: 40px;
     padding-top: 40px;
