--- a/src/components/BackBtn/BackBtn.scss
+++ b/src/components/BackBtn/BackBtn.scss
@@ -20,3 +20,9 @@
     background-image: url(../../assets/ico_leftArrowB.png);
   }
 }
+
+@media screen and (max-width: 1280px) {
+  .backBtn {
+    right: 20px;
+  }
+}
