--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -158,11 +158,9 @@
     .contents_wrap {
       li {
         width: calc(50% - 15px);
-        // height: auto;
-        // margin-bottom: 30px;
 
-        &:nth-child(n + 4) {
-          // margin-bottom: 0;
+        &:nth-child(4) {
+          margin-bottom: 30px;
         }
       }
     }
@@ -171,6 +169,8 @@
 
 @media screen and (max-width: 768px) {
   #project {
+    padding-top: 50px;
+
     .more {
       max-width: 400px;
       margin-left: auto;
