--- a/src/pages/More.scss
+++ b/src/pages/More.scss
@@ -14,7 +14,6 @@
   }
 
   ul {
-    // background-color: antiquewhite;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -22,9 +21,9 @@
     li {
       position: relative;
       width: calc(33.33% - 20px);
-      height: 258.5px;
+      height: auto;
       margin-right: 30px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
       border: 2px solid #eee;
       box-sizing: border-box;
 
@@ -138,5 +137,49 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #more {
+    ul {
+      li {
+        width: calc(50% - 15px);
+        margin-right: 30px;
+
+        &:nth-child(3n) {
+          margin-right: 30px;
+        }
+
+        &:nth-child(2n) {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #more {
+    padding-top: 50px;
+
+    ul {
+      justify-content: center;
+
+      li {
+        width: 400px;
+        margin-right: 0;
+
+        &:nth-child(3n) {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #project {
+    padding-top: 0;
   }
 }
