--- a/src/components/ProjectData/ProjectData.scss
+++ b/src/components/ProjectData/ProjectData.scss
@@ -19,7 +19,8 @@
       }
 
       b {
-        display: inline-block;
+        // display: inline-block;
+        // display: block;
         position: absolute;
         top: -16px;
         left: 50%;
@@ -27,12 +28,14 @@
         padding: 0 20px;
         font-size: 18px;
         letter-spacing: 2px;
-        text-align: center;
         background: #fff;
+        // width: auto;
+        // width: 100px;
       }
 
       li {
         list-style: disc;
+        text-align: left;
 
         &.other {
           color: #bbb;
@@ -58,6 +61,7 @@
       width: 630px;
       padding: 25px 30px;
       line-height: 35px;
+      text-align: left;
       background: #f5f5f5;
       border: 2px solid #eeeeee;
       box-sizing: border-box;
@@ -78,6 +82,7 @@
 
   .text_wrap {
     margin-bottom: 40px;
+    text-align: left;
 
     ul {
       padding: 20px 30px 15px 40px;
@@ -103,6 +108,91 @@
       border: 2px solid #f5f5f5;
       box-sizing: border-box;
       cursor: pointer;
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  #projectData {
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #projectData {
+    .function_wrap {
+      ul {
+        position: relative;
+        width: calc(33.33% - 33.33px);
+
+        &:nth-child(4n) {
+          margin-right: 50px;
+        }
+
+        &:nth-child(3n) {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #projectData {
+    .function_wrap {
+      ul {
+        position: relative;
+        width: calc(50% - 25px);
+
+        &:nth-child(3n) {
+          margin-right: 50px;
+        }
+
+        &:nth-child(2n) {
+          margin-right: 0;
+        }
+      }
+    }
+
+    .img_wrap {
+      img {
+        width: 49%;
+        margin-bottom: 20px;
+
+        &:nth-child(n + 3) {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #projectData {
+    .function_wrap {
+      display: none;
+    }
+
+    .text_wrap {
+      margin-bottom: 30px;
+
+      ul {
+        padding: 15px 25px 10px 35px;
+        line-height: 30px;
+      }
+    }
+
+    .img_wrap {
+      img {
+        width: 100%;
+
+        &:nth-child(n + 3) {
+          margin-bottom: 20px;
+        }
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
     }
   }
 }
