--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -1,16 +1,16 @@
 #detail {
   height: calc(100vh - 75px);
   padding-top: 75px;
-  text-align-last: left;
 
   .detail_inwrap {
     height: auto;
   }
 
   h2 {
-    margin-bottom: 50px;
-    padding-top: 50px;
+    margin-bottom: 40px;
+    padding-top: 40px;
     font-size: 2.5rem;
+    text-align: left;
   }
 
   .top_wrap {
@@ -28,6 +28,7 @@
     .summary_box {
       width: 630px;
       padding: 25px 30px;
+      text-align: left;
       background-color: #f5f5f5;
       box-sizing: border-box;
 
@@ -52,6 +53,7 @@
       }
 
       p {
+        display: flex;
         margin-bottom: 20px;
 
         &:last-child {
@@ -65,6 +67,7 @@
         }
 
         .value {
+          flex: 1;
         }
       }
 
@@ -86,15 +89,92 @@
     }
   }
 
-  .bottopm_wrap {
-    margin-top: 65px;
-    // padding-bottom: 30px;
+  .bottom_wrap {
+    margin-top: 55px;
 
     h3 {
       margin-bottom: 40px;
       padding: 10px 15px;
       font-size: 2.5rem;
+      text-align: left;
       background: #f5f5f5;
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  #detail {
+    .top_wrap {
+      img {
+        width: calc(50% - 10px);
+        margin-right: 20px;
+      }
+
+      .summary_box {
+        width: calc(50% - 10px);
+
+        p.description {
+          text-align: left;
+          line-height: 1.5rem;
+        }
+
+        p {
+          text-align: left;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #detail {
+    .top_wrap {
+      img {
+        width: calc(100% - 470px);
+      }
+
+      .summary_box {
+        width: 450px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #detail {
+    padding-top: 50px;
+
+    h2 {
+      margin-bottom: 30px;
+      padding-top: 40px;
+    }
+
+    .top_wrap {
+      flex-direction: column;
+
+      img {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 15px;
+      }
+
+      .summary_box {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #detail {
+    padding-top: 0;
+
+    .bottom_wrap {
+      margin-top: 35px;
+  
+      h3 {
+        margin-bottom: 25px;
+      }
     }
   }
 }
